--- a/content/themes/fedes/lib/stylesheets/components/footer.sass
+++ b/content/themes/fedes/lib/stylesheets/components/footer.sass
@@ -19,7 +19,7 @@ footer
   .textFooter-title
     margin: 0.5em 0 0 0
     font-size: 1.1em
-    font-family: latoLight
+    font-family: latoThin
 
   .textFooter-content
     font-weight: 200
@@ -36,6 +36,7 @@ footer
     .textFooter-title
       color: $turquoise
       margin: 0 0 0.5em 0
+      font-family: latoThin
 
   .colFooter
     @media (min-width: $mobile-width)
@@ -44,7 +45,9 @@ footer
     @media (max-width: $mobile-width)
       .directionText > ul
         margin: 0 0 $mobileVerticalMargin 0
-
+@media (min-width: $tablet-width)
+  .footer-form
+    margin-top: -19%
   .imgGalleryFooter
     border: 0px solid
     border-radius: 0px
@@ -57,6 +60,12 @@ footer
     color: $blue-one
     margin: 0.5em 0 3em 0
     text-align: right
+    @media (min-width: $tablet-width)
+      display: inline
+      text-align: left
+      font-size: 1em
+      a
+        margin-left: 5%
     font-size: 0.8em
     font-family: latoLight
     a
