--- a/content/themes/fedes/page-servicios.hbs
+++ b/content/themes/fedes/page-servicios.hbs
@@ -28,6 +28,8 @@
             </section>
 
             <div class="col-xs-12 collapse toggable-content" id="service-{{@number}}">
+                <div class="top-arrow"></div>
+                <div class="col-xs-10 toggable-content--content">
                 {{content}}
               </div>
             </div>
@@ -35,7 +37,6 @@
       </div>
       {{#foreach services}}
       <div class="col-xs-12 collapse toggable-content" id="service-{{@number}}" >
-        <div class="top-arrow"></div>
         <div class="col-xs-10 toggable-content--content">
           {{content}}
         </div>
