--- a/content/themes/fedes/lib/stylesheets/components/gallery.sass
+++ b/content/themes/fedes/lib/stylesheets/components/gallery.sass
@@ -110,5 +110,8 @@
       p
         font-size: 11px
         font-family: latoRegular
+  .serviceDetail
+    margin-left: -40px
+    width: 845px
 .textImgServicios
   background: #f2f2f2
