--- a/content/themes/fedes/page-servicios.hbs
+++ b/content/themes/fedes/page-servicios.hbs
@@ -36,7 +36,7 @@
           {{/foreach}}
       </div>
       {{#foreach services}}
-      <div class="col-xs-12 collapse toggable-content" id="service-{{@number}}" >
+      <div class="col-xs-12 col-sm-12 collapse toggable-content serviceDetail" id="service-{{@number}}" >
         <div class="col-xs-10 toggable-content--content">
           {{content}}
         </div>
