Include arrows service for images

--- a/content/themes/fedes/lib/stylesheets/components/gallery.sass
+++ b/content/themes/fedes/lib/stylesheets/components/gallery.sass
@@ -111,7 +111,6 @@
         font-size: 11px
         font-family: latoRegular
   .serviceDetail
-    margin-left: -40px
-    width: 845px
+    width: 100%
 .textImgServicios
   background: #f2f2f2
