--- a/content/themes/fedes/page-servicios.hbs
+++ b/content/themes/fedes/page-servicios.hbs
@@ -37,6 +37,7 @@
       </div>
       {{#foreach services}}
       <div class="col-xs-12 col-sm-12 collapse toggable-content serviceDetail" id="service-{{@number}}" >
+        <div class="arrow"></div>
         <div class="col-xs-10 toggable-content--content">
           {{content}}
         </div>
