--- a/content/themes/fedes/lib/stylesheets/components/toggable-content.sass
+++ b/content/themes/fedes/lib/stylesheets/components/toggable-content.sass
@@ -17,6 +17,26 @@ $topArrowHeight: 10px
     border-left: $topArrowHeight solid transparent
     border-right: $topArrowHeight solid transparent
     border-bottom: $topArrowHeight solid $light-grey
-  .toggable-content--content
+  .top-arrow-left
+    margin: auto
+    margin-top: $topArrowHeight*-1
+    margin-left: 104px
+    float: left
+    width: 0
+    height: 0
+    border-left: $topArrowHeight solid transparent
+    border-right: $topArrowHeight solid transparent
+    border-bottom: $topArrowHeight solid $light-grey
+  .top-arrow-right
+    margin: auto
+    margin-top: $topArrowHeight*-1
+    margin-right: 94px
+    float: right
+    width: 0
+    height: 0
+    border-left: $topArrowHeight solid transparent
+    border-right: $topArrowHeight solid transparent
+    border-bottom: $topArrowHeight solid $light-grey
+.toggable-content--content
     float: none
     margin: 1.5em auto
