Fix content Servicios

--- a/content/themes/fedes/lib/stylesheets/components/gallery.sass
+++ b/content/themes/fedes/lib/stylesheets/components/gallery.sass
@@ -97,20 +97,24 @@
     padding-bottom: 33px
 
 @media (min-width: $tablet-width)
-  .serviceList
-    margin-left: 15px
-    margin-right: 15px
-    section
-      padding-left: 0
-      padding-right: 0
-    .img-gallery
-      padding-bottom: 10px
-      padding-top: 10px
-      border-right: 1px solid $blue-dark
-      p
-        font-size: 11px
-        font-family: latoRegular
-  .serviceDetail
-    width: 100%
+  .container.gallery-principal
+    padding-left: 0
+    padding-right: 0
+    margin-left: 0
+    .serviceList
+      margin-left: 30px
+      margin-right: 6px
+      section
+        padding-left: 0
+        padding-right: 0
+      .img-gallery
+        padding-bottom: 10px
+        padding-top: 10px
+        border-right: 1px solid $blue-dark
+        p
+          font-size: 11px
+          font-family: latoRegular
+    .serviceDetail
+      width: 100%
 .textImgServicios
   background: #f2f2f2
