--- a/content/themes/fedes/lib/stylesheets/components/proyectos.sass
+++ b/content/themes/fedes/lib/stylesheets/components/proyectos.sass
@@ -6,40 +6,16 @@
     font-family: latoLight
 
   .projectList
-    @media screen and (min-width: $tablet-width)
-      margin-left: 15px
-      margin-right: 15px
-      section
-        padding-right: 0
+    @media (max-width: $mobile-width)
+      // hide last 3 proyectos
+      .proyecto-preview-4, .proyecto-preview-5, .proyecto-preview-6
+        display: none
+    @media (min-width: $tablet-width)
+      width: $maxTabletWidth
+      margin: auto
+      & > section
         padding-left: 0
-    .gallery-element
-      .img-gallery
-        overflow: hidden
-        @media screen and (min-width: $tablet-width)
-          img
-            height: 16vh
-    @media screen and (min-width: $tablet-width)
-      .gallery-element
-        // border-left: 1px solid $blue-dark
-        border-right: 1px solid #003c71
-        margin-top: 20px
-        .img-gallery
-          padding-top: 8px
-          width: 100%
-        .gallery-caption-wrapper
-          width: 100%
-          padding-bottom: 5px
-          .gallery-caption
-            p
-              font-size: 9px
-              font-family: latoRegular
-
-        .gallery-text-content
-          height: 90%
-          overflow: hidden
-          font-size: 15px
-          font-weight: 200
-          text-align: justify
-          @media (max-width: $mobile-width)
-            font-size: 13px
-// 1px solid #003c71
+        padding-right: 0
+        margin-left: -1px
+        &.proyecto-preview-3, &.proyecto-preview-6
+          border-right: 1px solid $blue-dark
