--- a/content/themes/fedes/lib/stylesheets/components/navbarCarousel.sass
+++ b/content/themes/fedes/lib/stylesheets/components/navbarCarousel.sass
@@ -6,6 +6,9 @@
   height: 84px
   z-index: 2
   display: inline-block
+  @media (max-width: $mobile-width)
+    padding-left: 0
+    padding-right: 0
 
   .navbar-list
     padding-left: 0
