--- a/content/themes/fedes/lib/stylesheets/components/footer.sass
+++ b/content/themes/fedes/lib/stylesheets/components/footer.sass
@@ -18,8 +18,10 @@ footer
     font-family: latoLight
   .textFooter-title
     margin: 0.5em 0 0 0
-    font-size: 1.1em
-    font-family: latoThin
+    font-size: 1.2em
+    font-family: latoMedium
+    @media (min-width: $tablet-width)
+      font-size: 1.3em
 
   .textFooter-content
     font-weight: 200
@@ -38,16 +40,6 @@ footer
       margin: 0 0 0.5em 0
       font-family: latoThin
 
-  .colFooter
-    @media (min-width: $mobile-width)
-      .directionText
-        margin-left: 1em
-    @media (max-width: $mobile-width)
-      .directionText > ul
-        margin: 0 0 $mobileVerticalMargin 0
-@media (min-width: $tablet-width)
-  .footer-form
-    margin-top: -19%
   .imgGalleryFooter
     border: 0px solid
     border-radius: 0px
@@ -56,6 +48,21 @@ footer
     width: 25px
     height: 25px
 
+  .footer-form
+    @media (min-width: $tablet-width)
+      position: absolute
+      top: 0
+
+  .colFooter
+    position: relative
+    .directionText > ul
+      margin: 0 0 $mobileVerticalMargin 0
+    @media (min-width: $mobile-width)
+      .directionText
+        margin-left: 1em
+    @media (min-width: $tablet-width)
+      min-height: 280px
+@media (min-width: $tablet-width)
   .leyendfooter
     color: $blue-one
     margin: 0.5em 0 3em 0
@@ -76,10 +83,3 @@ footer
     background: $blue-dark
     padding-top: 1px
     padding-bottom: 25px
-    .imgGalleryFooter
-      border: 0px solid
-      border-radius: 0px
-      background-color: $blue-dark
-      padding: 0
-      width: 25px
-      height: 25px
