--- a/content/themes/fedes/lib/stylesheets/components/footer.sass
+++ b/content/themes/fedes/lib/stylesheets/components/footer.sass
@@ -49,6 +49,8 @@ footer
     height: 25px
 
   .footer-form
+    .form-group
+      margin-bottom: 5px
     @media (min-width: $tablet-width)
       position: absolute
       top: 0
