fix right chevron for main carousel

--- a/content/themes/fedes/lib/stylesheets/components/carousel.sass
+++ b/content/themes/fedes/lib/stylesheets/components/carousel.sass
@@ -195,3 +195,8 @@
         font-family: Yorkville
         padding-left: 40px
         padding-right: 40px
+
+@media (min-width: $tablet-width)
+  .right.carousel-control
+    .glyphicon
+      margin-right: -14px
