--- a/content/themes/fedes/lib/stylesheets/components/carousel.sass
+++ b/content/themes/fedes/lib/stylesheets/components/carousel.sass
@@ -20,10 +20,11 @@
         height: 280px
         height: 90vh
       @media (min-width: $tablet-width)
+        height: 500px
         height: 50vh
       @media (min-width: $tablet-width) and (orientation: landscape)
         height: 300px
-        height: 90vh
+        height: 65vh
         .carousel.text .content-wrapper
           max-height: 80px
           max-height: 35vh
