enhance servicios view

--- a/content/themes/fedes/lib/stylesheets/application.sass
+++ b/content/themes/fedes/lib/stylesheets/application.sass
@@ -12,6 +12,7 @@
 @import "components/header"
 @import "components/footer"
 @import "components/proyectos"
+@import "components/servicios"
 @import "components/gallery"
 @import "components/toggable-content"
 @import "components/navbarFooter"
