--- a/content/themes/fedes/lib/stylesheets/components/toggable-content.sass
+++ b/content/themes/fedes/lib/stylesheets/components/toggable-content.sass
@@ -5,6 +5,8 @@ $topArrowHeight: 10px
     text-decoration: none
 
 .toggable-content
+  padding-left: 0
+  padding-right: 0
   background-color: $light-grey
   margin-top: -8px
   text-align: justify
@@ -12,26 +14,6 @@ $topArrowHeight: 10px
   .top-arrow
     margin: auto
     margin-top: $topArrowHeight*-1
-    width: 0
-    height: 0
-    border-left: $topArrowHeight solid transparent
-    border-right: $topArrowHeight solid transparent
-    border-bottom: $topArrowHeight solid $light-grey
-  .top-arrow-left
-    margin: auto
-    margin-top: $topArrowHeight*-1
-    margin-left: 104px
-    float: left
-    width: 0
-    height: 0
-    border-left: $topArrowHeight solid transparent
-    border-right: $topArrowHeight solid transparent
-    border-bottom: $topArrowHeight solid $light-grey
-  .top-arrow-right
-    margin: auto
-    margin-top: $topArrowHeight*-1
-    margin-right: 94px
-    float: right
     width: 0
     height: 0
     border-left: $topArrowHeight solid transparent
