--- a/content/themes/fedes/lib/stylesheets/components/gallery.sass
+++ b/content/themes/fedes/lib/stylesheets/components/gallery.sass
@@ -104,16 +104,14 @@
     .serviceList
       margin-left: 30px
       margin-right: 6px
+      .gallery-element--3
+        border-right: 1px solid $blue-dark
       section
         padding-left: 0
         padding-right: 0
       .img-gallery
         padding-bottom: 10px
         padding-top: 10px
-        border-right: 1px solid $blue-dark
-        p
-          font-size: 11px
-          font-family: latoRegular
     .serviceDetail
       width: 100%
 .textImgServicios
