revise post view

--- a/content/themes/fedes/lib/stylesheets/components/blog.sass
+++ b/content/themes/fedes/lib/stylesheets/components/blog.sass
@@ -8,7 +8,7 @@
 
 .blog-content
   .blog-post-container
-    @media only screen and (max-width:$desktop-width)
+    @media (min-width: $tablet-width)
       padding-left: $blog-padding
       padding-right: $blog-padding
 
