--- a/content/themes/fedes/post.hbs
+++ b/content/themes/fedes/post.hbs
@@ -9,7 +9,7 @@
       {{> "post-breadcrumbs"}}
 
       <div class="row">
-        <div class="post-contents col-xs-offset-2 col-xs-8 col-sm-8">
+        <div class="post-contents col-xs-offset-2 col-xs-8 col-sm-offset-1 col-sm-8">
           <div class="post-contents--header">
             <h2>{{title}}</h2>
             <img class="img-responsive"
@@ -19,20 +19,22 @@
               Por: <span class="post-contents--author">{{author autolink="false"}}</span>, {{moment-date published_at format="D [de] MMMM [de] YYYY" locale="es"}}
             </div>
           </div>
+
           <div class="post-contents--content">{{content}}</div>
+
+          <div class="post-tags-and-share col-xs-12">
+            <div class="col-xs-7 post-tags">
+              {{tags from="2"}}
+            </div>
+            <div class="col-xs-5 post-share">
+              <a class="twitter-share-button" href="https://twitter.com/intent/tweet" data-via="fdsloja">Tweet</a>
+              <div class="fb-share-button" data-href="{{@blog.url}}{{url}}" data-layout="button" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u={{@blog.url}}{{url}}">Share</a></div>
+            </div>
+          </div>
+          <div class="clearfix"></div>
         </div>
 
-        <div class="post-tags-and-share col-xs-12">
-          <div class="col-xs-offset-2 col-xs-5 post-tags">
-            {{tags from="2"}}
-          </div>
-          <div class="col-xs-3 post-share">
-            <a class="twitter-share-button" href="https://twitter.com/intent/tweet" data-via="fdsloja">Tweet</a>
-            <div class="fb-share-button" data-href="{{@blog.url}}{{url}}" data-layout="button" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u={{@blog.url}}{{url}}">Share</a></div>
-          </div>
-        </div>
-
-        <div class="post-footer-section col-xs-offset-2 col-xs-10 col-sm-4">
+        <div class="post-footer-section col-xs-offset-2 col-xs-10 col-sm-3 col-sm-offset-0">
           <h3>Categorías</h3>
           <div class="post-categories--tags col-xs-10">
             {{> "navigation-blog"}}
