--- a/content/themes/fedes/lib/stylesheets/components/blog.sass
+++ b/content/themes/fedes/lib/stylesheets/components/blog.sass
@@ -8,9 +8,9 @@
 
 .blog-content
   .blog-post-container
-    @media (min-width: $tablet-width)
-      padding-left: $blog-padding
-      padding-right: $blog-padding
+    // @media (max-width: $desktop-width)
+    padding-left: $blog-padding
+    padding-right: $blog-padding
 
   .blog-post-content
     padding-left: 0px
