--- a/content/themes/fedes/lib/stylesheets/components/gallery.sass
+++ b/content/themes/fedes/lib/stylesheets/components/gallery.sass
@@ -54,17 +54,14 @@
     .img-responsive
       width: 100%
       height: 190px
-      height: 40vh
-      @media (min-width: $tablet-width)
-        height: 20vh
+      // @media (min-width: $tablet-width)
+
     .img-responsive
       background-size: cover
       background-position: 50%
       width: 99% // fix overlapping with bottom container
       @media (min-width: $tablet-width)
-        min-height: 200px
-        height: 20vh
-        max-height: 250px
+        height: 190px
         width: 100%
     .gallery-text-content
       font-family: latoThin
