--- a/content/themes/fedes/page-equipo.hbs
+++ b/content/themes/fedes/page-equipo.hbs
@@ -8,12 +8,11 @@
       {{> "carouselEquipo"}}
 
       <h2 class="gallery-title">Trabaja con nosotros</h2>
-      {{> "trabaja-con-nosotros"}}
-
       <div class="row">
+        {{> "trabaja-con-nosotros"}}
         {{#get "posts" filter="tag:equipocontactos" order="title desc" as |post|}}
           {{#foreach post}}
-            <div class="col-xs-offset-2 col-xs-8">
+            <div class="col-xs-offset-2 col-xs-8 col-sm-3 col-sm-offset-0">
               <div class="gallery-element">
                 <div class="img-gallery">
                   <img class="img-responsive"
