--- a/content/themes/fedes/partials/carouselEquipo.hbs
+++ b/content/themes/fedes/partials/carouselEquipo.hbs
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-xs-offset-2 col-xs-8">
     <div class="carousel slide" id="myCarouselEquipo">
-      <div class="carousel-inner cauroselEquipo">
+      <div class="carousel-inner carouselEquipo">
         {{#get "posts" filter="tag:imagenequipo" as |images|}}
           {{#foreach images}}
             <div class="item">
