--- a/content/themes/fedes/partials/trabaja-con-nosotros.hbs
+++ b/content/themes/fedes/partials/trabaja-con-nosotros.hbs
@@ -1,30 +1,28 @@
 {{#get "posts" filter="slug:registrate" as |post|}}
   {{#post}}
-    <div class="row">
-      <a class="toggable-header col-xs-offset-2 col-xs-8" href="#register-form">
-        <div class="gallery-element trabaja-con-nosotros"
-             data-toggle="collapse"
-             data-target="#register-form">
-          <div class="overlay">
-            <div class="img-gallery">
-              <div class="img-responsive"
-                   style="background-image: url('{{image}}')"></div>
-            </div>
-            <div class="gallery-caption-wrapper">
-              <div class="gallery-caption">
-                <p>{{title}}</p>
-              </div>
+    <a class="toggable-header col-xs-offset-2 col-xs-8 col-sm-offset-3 col-sm-3" href="#register-form">
+      <div class="gallery-element trabaja-con-nosotros"
+           data-toggle="collapse"
+           data-target="#register-form">
+        <div class="overlay">
+          <div class="img-gallery">
+            <div class="img-responsive"
+                 style="background-image: url('{{image}}')"></div>
+          </div>
+          <div class="gallery-caption-wrapper">
+            <div class="gallery-caption">
+              <p>{{title}}</p>
             </div>
           </div>
         </div>
-        <div class="clearfix"></div>
-      </a>
-      <div class="register-content toggable-content collapse col-xs-12" id="register-form">
-        <div class="top-arrow"></div>
-        <div class="toggable-content--content col-xs-9">
-          <div class="content">{{content}}</div>
-          {{> "formEquipo"}}
-        </div>
+      </div>
+      <div class="clearfix"></div>
+    </a>
+    <div class="register-content toggable-content collapse col-xs-12" id="register-form">
+      <div class="top-arrow"></div>
+      <div class="toggable-content--content col-xs-9">
+        <div class="content">{{content}}</div>
+        {{> "formEquipo"}}
       </div>
     </div>
   {{/post}}
