enhance equipo view

--- a/content/themes/fedes/lib/stylesheets/components/pageEquipo.sass
+++ b/content/themes/fedes/lib/stylesheets/components/pageEquipo.sass
@@ -16,6 +16,10 @@
       font-size: 15px
 
 .register-content
+  z-index: 3
+  @media (min-width: $tablet-width)
+    position: absolute
+    margin-top: 220px
   strong
     color: $blue-light
     font-size: 1.2em
