Fix fonts for footer and forms

--- a/content/themes/fedes/lib/stylesheets/components/footer.sass
+++ b/content/themes/fedes/lib/stylesheets/components/footer.sass
@@ -19,7 +19,7 @@ footer
   .textFooter-title
     margin: 0.5em 0 0 0
     font-size: 1.2em
-    font-family: latoMedium
+    font-family: latoBold
     @media (min-width: $tablet-width)
       font-size: 1.3em
 
@@ -51,6 +51,8 @@ footer
   .footer-form
     .form-group
       margin-bottom: 5px
+      input, & textarea
+       font-family: latoThin
     @media (min-width: $tablet-width)
       position: absolute
       top: 0
