--- a/content/themes/fedes/lib/stylesheets/components/pageEquipo.sass
+++ b/content/themes/fedes/lib/stylesheets/components/pageEquipo.sass
@@ -40,7 +40,11 @@
   .form-advise
     color: $turquoise
     text-align: left
-    font-style: italic
+    font-family: latoLightitalic
+.content
+  font-family: latoThin
+  .checkboxes-options, .checkboxes-label, input, fieldset
+    font-family: latoThin
 // .container.gallery-principal
 //   .row-equipo
 //     .img-gallery img
