--- a/content/themes/fedes/partials/formEquipo.hbs
+++ b/content/themes/fedes/partials/formEquipo.hbs
@@ -18,7 +18,7 @@
     <div class="col-xs-4 checkboxes-label">
       <label>género:</label>
     </div>
-    <div class="col-xs-8">
+    <div class="col-xs-8 checkboxes-options">
       <div>
         <input type="checkbox" name="genere" value="male">
         masculino
