--- a/content/themes/fedes/lib/stylesheets/components/pageAliados.sass
+++ b/content/themes/fedes/lib/stylesheets/components/pageAliados.sass
@@ -6,7 +6,6 @@
   padding: 0 1em
   .img-responsive
     height: 160px
-    height: 25vh
     background-size: contain
     width: 100%
     background-repeat: no-repeat
@@ -45,3 +44,11 @@
   //       margin-top: 50px
   //     .glyphicon.glyphicon-chevron-right
   //       margin-top: 50px
+
+.gallery-principal.page-aliados
+  .row-services
+    margin-top: 30px
+  @media (min-width: $tablet-width)
+    max-width: $maxTabletWidth
+    margin-left: auto
+    margin-right: auto
