aliados view for tablet

--- a/content/themes/fedes/page-aliados.hbs
+++ b/content/themes/fedes/page-aliados.hbs
@@ -13,7 +13,7 @@
         <section>
           {{#get "posts" filter="tag:aliadosfedes" as |services|}}
             {{#foreach services}}
-              <div class="col-xs-12 col-sm-4">
+              <div class="col-xs-12 col-sm-4 aliado-wrapper">
                 <figure class="aliado img-gallery-services">
                   <div style="background-image: url({{image}});"
                     class="img-responsive"
