--- a/content/themes/fedes/lib/stylesheets/components/pageAliados.sass
+++ b/content/themes/fedes/lib/stylesheets/components/pageAliados.sass
@@ -52,3 +52,18 @@
     max-width: $maxTabletWidth
     margin-left: auto
     margin-right: auto
+    .aliado
+      max-width: 100%
+      border-right: 0
+      margin: 30px auto
+      .img-responsive
+        max-width: 75%
+        margin: auto
+      & > div
+        text-align: center
+    .aliado-wrapper
+      padding-left: 0
+      padding-right: 0
+      &:last-child, &:nth-child(3n+3)
+        .aliado
+          border-right: 1px solid $dark-grey
