--- a/content/themes/fedes/page-contactos.hbs
+++ b/content/themes/fedes/page-contactos.hbs
@@ -5,7 +5,7 @@
     <div class="mapFedes"></div>
     {{> "carousel-footer"}}
 
-    <div class="container gallery gallery-principal" >
+    <div class="container gallery gallery-principal">
       {{#get "tags" filter="slug:ponte-en-contacto" as |contactoTag|}}
         {{#contactoTag}}
           {{> "gallery-title" currentTag=contactoTag}}
@@ -14,7 +14,7 @@
     </div>
 
     <div class="row">
-      <div class="col-xs-offset-2 col-xs-8">
+      <div class="address-wrapper col-xs-offset-2 col-xs-8 col-sm-4 col-sm-offset-0">
         <div class="directionText">
           <ul class="nav nav-pills nav-stacked">
             {{#get "posts" slug="contactos-direccion" as |article|}}
@@ -28,10 +28,8 @@
           </ul>
         </div>
       </div>
-    </div>
 
-    <div class="row">
-      <div class="col-xs-offset-2 col-xs-8">
+      <div class="col-xs-offset-2 col-xs-8 col-sm-offset-1 col-sm-6">
         <form class="form-with-gray-inputs" data-toggle="validator" role="form">
           <fieldset>Use este formulario para enviarnos un mensaje:</fieldset>
           <div class="form-group">
