--- a/content/themes/fedes/lib/stylesheets/components/navbarPricipal.sass
+++ b/content/themes/fedes/lib/stylesheets/components/navbarPricipal.sass
@@ -2,13 +2,13 @@
   border-width: 0px
   background-color: $dark-grey
   border-radius: 0px
-  height: 84px
+  height: 60px
   display: inline-block
   margin-bottom: -69px
   .triangle-topright
     width: 25
     height: 0
-    border-top: 84px solid $dark-grey
+    border-top: 60px solid $dark-grey
     border-left: 48px solid transparent
     display: inline-block
     overflow: hidden
@@ -17,5 +17,14 @@
   .container-fluid .listHeader
     font-family: latoLight
     float: right
-    margin-top: 20px
+    margin-top: 5px
     margin-right: 108px
+    &.navbar-nav>li>a
+      color: #333
+    .glyphicon
+      color: $blue-dark
+      font-size: 8px
+      border: 1px solid $blue-dark
+      border-radius: 50%
+      padding: 2px
+      top: 0
