enhance main navigation

--- a/content/themes/fedes/partials/navigation.hbs
+++ b/content/themes/fedes/partials/navigation.hbs
@@ -1,3 +1,8 @@
 {{#foreach navigation}}
-  <li class="{{#if current}} nav-current{{/if}}"><a href="{{url absolute="true"}}">{{label}}</a></li>
+  <li class="{{#if current}} nav-current{{/if}}">
+    <a href="{{url absolute="true"}}">
+      <span class="bullet-marker">•</span>
+      {{label}}
+    </a>
+  </li>
 {{/foreach}}
