--- a/content/themes/fedes/lib/stylesheets/components/navbarCarousel.sass
+++ b/content/themes/fedes/lib/stylesheets/components/navbarCarousel.sass
@@ -3,7 +3,7 @@
   background-color: $blue-light
   position: absolute
   border-radius: 0px
-  height: 84px
+  height: 60px
   z-index: 2
   display: inline-block
   @media (max-width: $mobile-width)
@@ -12,7 +12,7 @@
 
   .navbar-list
     padding-left: 0
-    padding-top: 2%
+    margin-top: 5px
     font-family: latoLight
     .navbar-menuItem
       color: #FFFFFF
@@ -20,11 +20,14 @@
         color: #00cfff
     .nav-current
       color: #00cfff
+    .bullet-marker
+      @media (max-width: $tablet-width)
+        display: none
 
   .triangle-topright
     width: 25
     height: 0
-    border-top: 84px solid $blue-light
+    border-top: 60px solid $blue-light
     border-left: 44px solid transparent
     display: inline-block
     overflow: hidden
@@ -36,7 +39,7 @@
     width: 0
     height: 0
     border-style: solid
-    border-width: 0 44px 47px 41px
+    border-width: 0 44px 32px 27px
     border-color: transparent transparent #003c71
     display: inline-block
     position: absolute
@@ -60,7 +63,7 @@
 
     &-header
       float: left
-      padding-left: 1em;
+      padding-left: 1em
 
     .navbar-collapse
       background-color: $blue-light
