--- a/content/themes/fedes/lib/stylesheets/components/gallery.sass
+++ b/content/themes/fedes/lib/stylesheets/components/gallery.sass
@@ -54,15 +54,13 @@
     .img-responsive
       width: 100%
       height: 190px
-      // @media (min-width: $tablet-width)
 
     .img-responsive
       background-size: cover
       background-position: 50%
       width: 99% // fix overlapping with bottom container
-      @media (min-width: $tablet-width)
-        height: 190px
-        width: 100%
+      @media (min-width: $desktop-width)
+        height: 210px
     .gallery-text-content
       font-family: latoThin
       top: 0
