--- a/content/themes/fedes/lib/stylesheets/components/navbarFooter.sass
+++ b/content/themes/fedes/lib/stylesheets/components/navbarFooter.sass
@@ -21,6 +21,7 @@
     padding-top: 2%
     .navbar-menuItem
       color: #FFFFFF
+      margin-right: 10px
       &:hover
         color: #00cfff
 
