fonts for footer

--- a/content/themes/fedes/lib/stylesheets/components/navbarFooter.sass
+++ b/content/themes/fedes/lib/stylesheets/components/navbarFooter.sass
@@ -10,6 +10,7 @@
   margin-bottom: 0
   width: 63%
   display: inline-block
+  font-family: latoRegular
   @media screen and (max-width: $mobile-width)
     width: 100%
     margin-left: 0
