--- a/content/themes/fedes/lib/stylesheets/components/navbarFooter.sass
+++ b/content/themes/fedes/lib/stylesheets/components/navbarFooter.sass
@@ -24,7 +24,7 @@
       color: #FFFFFF
       margin-right: 10px
       &:hover
-        color: #00cfff
+        color: $blue-one
 
   .triangle-topright.carousel
     width: 25
