--- a/content/themes/fedes/lib/stylesheets/components/carousel-secondary.sass
+++ b/content/themes/fedes/lib/stylesheets/components/carousel-secondary.sass
@@ -1,19 +1,27 @@
 .carousel.carousel-main-secondary .carousel-inner
   .item
     height: 150px
+    @media (min-width: $tablet-width)
+      height: 400px
+    @media (min-width: $desktop-width)
+      height: 500px
     .menu-carousel
+      @media (min-width: $tablet-width)
+        height: 170px
+      @media (min-width: $desktop-width)
+        height: 200px
       @media (max-width: $mobile-width)
         width: 100%
         height: 100%
-
-        .carousel.text
+      .carousel.text
+        h1
+          color: $blue-one
+        @media (max-width: $mobile-width)
           padding: 0
           max-width: $maxMobileWidth
           margin: auto
           .content-wrapper
             max-height: 30%
-          h1
-            color: $blue-one
         .carousel-controls-wrapper
           height: 25%
           .carousel-control
@@ -21,5 +29,7 @@
             height: 30px
 
 .carousel-footer-secondary
+  padding-top: 15px
+  padding-bottom: 15px
   @media (max-width: $mobile-width)
     padding: 14px 0
