--- a/content/themes/fedes/lib/stylesheets/components/carousel.sass
+++ b/content/themes/fedes/lib/stylesheets/components/carousel.sass
@@ -40,6 +40,9 @@
     opacity: 0.7
     position: absolute
 
+    @media (min-width: $tablet-width)
+      bottom: 30px
+
     .carousel.text
       text-align: left
       color: #fff
@@ -117,6 +120,8 @@
           margin-left: 61px
           margin-right: 61px
           vertical-align: top
+          @media (min-width: $desktop-width)
+            margin-top: 80px
           .glyphicon
             margin-top: -15px
             margin-left: -14px
@@ -158,7 +163,7 @@
         position: absolute
         display: block
         width: 100%
-        height: 20%
+        height: 28%
         text-align: center
         margin-top: -30px
         bottom: 0
