--- a/content/themes/fedes/lib/stylesheets/components/servicios.sass
+++ b/content/themes/fedes/lib/stylesheets/components/servicios.sass
@@ -1,3 +1,9 @@
+.container.gallery-principal
+  .serviceList
+    .gallery-element[aria-expanded=true]
+      .img-gallery .transparent-overlay
+        visibility: visible
+
 .serviceList
   @media (min-width: $tablet-width)
     position: relative
