--- a/content/themes/fedes/page-servicios.hbs
+++ b/content/themes/fedes/page-servicios.hbs
@@ -16,8 +16,9 @@
               <div class="gallery-element gallery-element--{{@number}}" data-toggle="collapse"
               data-target="#service-{{@number}}">
                 <div class="img-gallery">
-                  <img class="img-responsive"
-                       style="background-image: url('{{image}}')" />
+                  <div class="img-responsive"
+                       style="background-image: url('{{image}}')"></div>
+                  <div class="transparent-overlay"></div>
                   <div class="gallery-caption-wrapper">
                     <div class="gallery-caption">
                       <p>{{title}}</p>
