--- a/content/themes/fedes/partials/carouselEquipo.hbs
+++ b/content/themes/fedes/partials/carouselEquipo.hbs
@@ -14,7 +14,7 @@
                          style="background-image: url('{{asset 'img/no-image.jpg'}}')"
                        {{/if}}
                   / >
-                  <div class="gallery-text-content">{{content}}</div>
+                  <div class="gallery-text-content transparent-overlay">{{content}}</div>
                 </div>
                 <div class="gallery-caption-wrapper">
                   <div class="gallery-caption">
