--- a/content/themes/fedes/partials/proyectos.hbs
+++ b/content/themes/fedes/partials/proyectos.hbs
@@ -20,7 +20,7 @@
                   style="background-image: url('{{asset 'img/no-image.jpg'}}')"
                 {{/if}}
                 ></div>
-              <div class="gallery-text-content">
+              <div class="gallery-text-content transparent-overlay">
                 <div class="projectContent">{{content}}</div>
               </div>
             </div>
