enhance blog view for desktop

--- a/content/themes/fedes/lib/stylesheets/components/blog.sass
+++ b/content/themes/fedes/lib/stylesheets/components/blog.sass
@@ -51,6 +51,9 @@
         @media (min-width: $tablet-width)
           height: 138px
           overflow: hidden
+        @media (min-width: $desktop-width)
+          height: 100px
+          overflow: hidden
       .img-responsive
         height: 100px
         width: $blog-all-width
