--- a/content/themes/fedes/tag.hbs
+++ b/content/themes/fedes/tag.hbs
@@ -11,7 +11,7 @@
   <div class="container blog-post-container">
     <div class="row">
       {{#foreach posts}}
-        <div class="blog-post-content col-xs-12 col-sm-6 col-lg-4">
+        <div class="blog-post-content col-xs-12 col-sm-6 col-md-4">
           <a href="{{url}}" class="blog-post-link">
             <figure class="blog-post-link-figure">
               <div class="blog-post-link-date">
