--- a/content/themes/fedes/lib/stylesheets/components/blog.sass
+++ b/content/themes/fedes/lib/stylesheets/components/blog.sass
@@ -127,7 +127,7 @@
         display: table-cell
 
     .carousel-footer-secondary
-      height: 50px
+      // height: 50px
     .active
       a
         color: $blue-light
