--- a/content/themes/fedes/lib/stylesheets/components/carousel-secondary.sass
+++ b/content/themes/fedes/lib/stylesheets/components/carousel-secondary.sass
@@ -33,3 +33,8 @@
   padding-bottom: 15px
   @media (max-width: $mobile-width)
     padding: 14px 0
+  @media (min-width: $tablet-width)
+    margin-top: 30px
+    height: 50px
+  @media (min-width: $desktop-width)
+    height: 60px
